Implemented position generator, calibration data collector and intrinsic camera calibrator for COB4

--- a/cob_calibration_executive/package.xml
+++ b/cob_calibration_executive/package.xml
@@ -32,6 +32,9 @@
 
   <run_depend>cob_camera_calibration</run_depend>
   <run_depend>cob_robot_calibration_est</run_depend>
+
+  <run_depend>moveit_commander</run_depend>
+  <run_depend>cob_moveit_config</run_depend>
   
 
 
